--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -30,6 +30,6 @@
     <aside>
         <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/bern-switzerland/800x500/bern-switzerland-temple-lds-784290-wallpaper.jpg" alt="Bern-Switzerland-Temple" width="200">
     </aside>
-    <footer>🏝️ Sandra Cooper 🏝️</footer>
+    <footer>🙏 Sandra Cooper 🙏</footer>
 </body>
 </html>
