--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -20,11 +20,11 @@
     <main>
         <section>
             <h2>Heading</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus, atque!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus, atque!...</p>
         </section>
         <section>
             <h2>Heading</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, temporibus?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, temporibus?...</p>
         </section>
     </main>
     <aside>
