holy grail added

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -28,7 +28,7 @@
                 </section>
             </main>
             <aside>
-                <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/bern-switzerland/800x500/bern-switzerland-temple-lds-784290-wallpaper.jpg" alt="Bern-Switzerland-Temple" width="200">
+                <img alt="Bern-Switzerland-Temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/bern-switzerland/800x500/bern-switzerland-temple-lds-784290-wallpaper.jpg" width="200">
             </aside>
             <footer>🙏 Sandra Cooper 🙏</footer>
         </body>
