--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Sandra Cooper | WDD 130</title>
+    <meta name="description" content="Sandra Cooper BYU-Idaho WWD 130 course home page">
+    <meta name="author" content="Sandra Cooper">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -24,6 +26,18 @@
            who holds the future and looking forward to good things working within the industry.
         </p>
     </main>
+    <aside>
+      <h2>The Bahamas</h2>
+      <img src="images/The Bahamas.jpg" alt="The Bahamas">
+      <p>The Bahamas is a stunning chain of islands in the Atlantic Ocean, just off the coast of Florida.
+         Known for its crystal-clear turquoise waters, white-sand beaches, and laid-back island vibe,
+         it's a place where time seems to slow down. Made up of over 700 islands and cays, though only
+         about 30 are inhabited, it offers everything; from bustling towns like Nassau, to quiet untouched
+         stretches of paradise. Rich in culture and history, The Bahamas is a melting pot of African, European,
+         and Caribbean influences that is reflected in its music, food, and friendly people. Whether you're
+         snorkeling over vibrant coral reefs, enjoying fresh conch salad by the sea, or just relaxing in the sun,
+         every island feels like a true escape.<br>The Bahamas, my home!</p>
+    </aside>
     <footer>
         <p>&copy;2025 🏝️ Sandra Cooper 🏝️ Freeport, Grand Bahama. The Bahamas. </p>
     </footer>
