--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
     <aside>
       <h2>The Bahamas</h2>
-      <img src="images/The Bahamas.jpg" alt="The Bahamas">
+      <img src="images/the-bahamas.jpg" alt="The Bahamas">
       <p>The Bahamas is a stunning chain of islands in the Atlantic Ocean, just off the coast of Florida.
          Known for its crystal-clear turquoise waters, white-sand beaches, and laid-back island vibe,
          it's a place where time seems to slow down. Made up of over 700 islands and cays, though only
