--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <main>
         <h1>Sandra Cooper | WDD 130</h1>
         <img src="images/profile-sm.webp" alt="Hello my name is Sandra Cooper" width="200">
-        <p>Hello, my name is Sandra Cooper and I am from Freeport, Grand Bahama. The Bahamas.<br>
-           I enjoy learning new skills. I'm currently studying Software Development at BYU<br>
-           Pathway Connect as an online student. Art has always been a passion of mine, and through<br>
-           software development I will be able to express my artistic abilities, while helping others<br>
-           in my community to thrive. I don't know what the future holds, but i'm trusting in the one<br>
-           who holds the future and looking forward to good things working within the industry.
+        <p>Hello, my name is Sandra Cooper and I am a native of Freeport, Grand Bahama. The Bahamas.<br>
+           I enjoy learning new skills, currently studying Software Development with BYU Idaho through<br>
+           Pathway Connect as an online student. Creativity has always been a passion of mine, and I<br>
+           would like to express my artistic abilities through software development. Additionally, helping<br>
+           others to thrive is also a desire. I don't know what the future may hold, however, my trust<br>
+           is in the one who hold the future. Looking forward to good things within the development industry.
         </p>
     </main>
     <aside>
