--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <h1>Sandra Cooper | WDD 130</h1>
         <img src="images/profile-sm.webp" alt="Hello my name is Sandra Cooper" width="200">
-        <p>Hello, my name is Sandra Cooper and I am a native of Freeport, Grand Bahama. The Bahamas.<br>
+        <p>Hello, my name is Sandra Cooper and I am a native of Freeport, Grand Bahama, The Bahamas.<br>
            I enjoy learning new skills, currently studying Software Development with BYU Idaho through<br>
            Pathway Connect as an online student. Creativity has always been a passion of mine, and I<br>
            would like to express my artistic abilities through software development. Additionally, helping<br>
