--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--19 July 2025-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -13,37 +15,30 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="https://linkedin.com">LinkedIn Profile</a>
-            <a href="https://facebook.com">Facebook Profile</a>
         </nav>
     </header>
     <main>
-        <h1>Sandra Cooper | WDD 130</h1>
-        <img src="images/profile-sm.webp" alt="Hello my name is Sandra Cooper" width="200">
-        <p> Hello, my name is Sandra Cooper, and I am proud to call Freeport, Grand Bahama, The Bahamas<br>
-          my home. I have always been someone who thrives on creativity and learning, and that passion<br>
-          has led me to pursue a path in Software Development. I'm currently studying online through<br>
-          BYU-Idaho's PathwayConnect program, working toward expanding my skills and exploring the<br>
-          many ways technology and creativity can come together.<br><br>
-          Art has always been a meaningful part of my life. I find joy and peace in charcoal drawing,<br>
-          watercolor painting, and sketching with various pencil shades, each medium allowing me to<br>
-          express different layers of thought and emotion. Whether it's the soft smudges of charcoal or<br>
-          the gentle flow of watercolor, creating art has helped me see the beauty in both simplicity and<br>
-          detail. I hope to bring that same artistic energy into the software I build, crafting digital<br>
-          experiences that are not only functional but also thoughtfully designed and inspiring.<br><br>
-          Beyond my personal goals, I have a genuine desire to help others grow and thrive. Whether it's<br>
-          through encouragement, sharing knowledge, or simply listening, I believe we all have something<br>
-          valuable to offer. I don't know exactly what the future holds, but I choose to place my trust in <br>
-          the One who does. With faith as my foundation and creativity as my compass, I'm excited for what<br>
-          lies ahead in the world of software development and beyond.<br>
-        </p>
-        <ul class="box">
-          <li><a href="https://churchofjesuschristtemples.org/atlanta-georgia-temple/" target="_blank">Atlanta Georgia Temple</a></li>
-          <li><a href="https://churchofjesuschristtemples.org/vancouver-british-columbia-temple/" target="_blank">Vancouver British Columbia Temple</a></li>
-          <li><a href="https://churchofjesuschristtemples.org/logan-utah-temple/" target="_blank">Logan Utah Temple</a></li>
-        </ul>
+      <h1>Sandra Cooper | WDD 130</h1>
+      <img src="images/profile-sm.webp" alt="Hello my name is Sandra Cooper" width="200">
+      <p> Hello, my name is Sandra Cooper, and I am proud to call Freeport, Grand Bahama, The Bahamas<br>
+        my home. I have always been someone who thrives on creativity and learning, and that passion<br>
+        has led me to pursue a path in Software Development. I'm currently studying online through<br>
+        BYU-Idaho's PathwayConnect program, working toward expanding my skills and exploring the<br>
+        many ways technology and creativity can come together.<br><br>
+        Art has always been a meaningful part of my life. I find joy and peace in charcoal drawing,<br>
+        watercolor painting, and sketching with various pencil shades, each medium allowing me to<br>
+        express different layers of thought and emotion. Whether it's the soft smudges of charcoal or<br>
+        the gentle flow of watercolor, creating art has helped me see the beauty in both simplicity and<br>
+        detail. I hope to bring that same artistic energy into the software I build, crafting digital<br>
+        experiences that are not only functional but also thoughtfully designed and inspiring.<br><br>
+        Beyond my personal goals, I have a genuine desire to help others grow and thrive. Whether it's<br>
+        through encouragement, sharing knowledge, or simply listening, I believe we all have something<br>
+        valuable to offer. I don't know exactly what the future holds, but I choose to place my trust in <br>
+        the One who does. With faith as my foundation and creativity as my compass, I'm excited for what<br>
+        lies ahead in the world of software development and beyond.<br>
+      </p>
     </main>
-    <aside class="box">
+    <aside>
       <h2>The Bahamas</h2>
       <img src="images/grand-bahama.webp" alt="The Bahamas">
       <p>The Bahamas is a stunning chain of islands in the Atlantic Ocean, just off the coast of Florida.
@@ -59,6 +54,4 @@
         <p>&copy;2025 🏝️ Sandra Cooper 🏝️ Freeport, Grand Bahama. The Bahamas. </p>
     </footer>
   </body>
-
-<!-- 19 July 2025 -->
 </html>
