--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -1,25 +1,120 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe Practice</title>
-</head>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            <title>White Water Rafting Wireframe</title>
+        <style>
+            * {
+                box-sizing: border-box;
+            }
+
+            body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+            }
+
+            header, nav, section, footer {
+                border: 2px dashed #777;
+                margin: 10px;
+                padding: 20px;
+            }
+
+            header {
+                background-color: darkgrey;
+                text-align: center;
+            }
+
+            nav {
+                background-color: slategray;
+                text-align: center;
+            }
+
+            nav a {
+                margin: 0 15px;
+                text-decoration: none;
+                color: #333;
+                font-weight: bold;
+            }
+
+            .hero {
+                background-color: lightslategray;
+                height: 200px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 2rem;
+            }
+
+            .section-title {
+                font-size: 1.5rem;
+                margin-bottom: 10px;
+            }
+
+            .grid {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 20px;
+            }
+
+            .box {
+                flex: 1;
+                min-width: 250px;
+                height: 150px;
+                background-color: #f1f1f1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border: 1px dashed #aaa;
+            }
+
+            footer {
+                background-color: grey;
+                text-align: center;
+            }
+        </style>
+    </head>
 <body>
     <header>
-        <img src="" alt="">
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-        </nav>
+        <h1>Main Heading</h1>
+        <p>"Catchy Quote"</p>
     </header>
-    <main>
+        <main>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Menu</a>
+                <a href="#">Goes</a>
+                <a href="#">Here</a>
+                <a href="#">Add Gallery</a>
+            </nav>
+            <div class="hero">
+                Hero Banner / CTA (Call To Action)
+            </div>
+            <section>
+                <div class="section-title">Our Tours</div>
+                <div class="grid">
+                <div class="box">Beginner Rapids</div>
+                <div class="box">Family Fun Trip</div>
+                <div class="box">Extreme Adventure</div>
+                </div>
+            </section>
+            <section>
+                <div class="section-title">About Us</div>
+                <div class="box" style="height: 100px;">Storyline, Mission, Vision, Team</div>
+            </section>
+            <section>
+                <div class="section-title">Testimonials</div>
+                <div class="grid">
+                <div class="box">"Amazing experience!"</div>
+                <div class="box">"Loved every second!"</div>
+                <div class="box">"Highly recommend!"</div>
+                </div>
+            </section>
+        </main>
+<footer>
+    <p>&copy; 2025 company name | Contact: website url</p>
+</footer>
 
-    </main>
-    <footer>
-        
-    </footer>
 </body>
 </html>
