--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,7 +19,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="trips.html">Trips</a>
-      <a href="Contact.html">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
     
@@ -55,9 +55,9 @@
   <footer>
     <p>&copy; 2025 Rapids White Water Rafting Co. | Sandra Cooper</p>
     <nav class="socialmedia">
-      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
+      <a href="#"><img src="images/facebook.png" alt="Facebook Logo"></a>
+      <a href="#"><img src="images/instagram.png" alt="Instagram Logo"></a>
+      <a href="#"><img src="images/linkedin.png" alt="LinkedIn Logo"></a>
     </nav>
   </footer>   
 </body>
