--- a/wwr/about.html
+++ b/wwr/about.html
@@ -55,9 +55,9 @@
   <footer>
     <p>&copy; 2025 Rapids White Water Rafting Co. | Sandra Cooper</p>
     <nav class="socialmedia">
-      <a href="#"><img src="images/facebook.png" alt="Facebook Logo"></a>
-      <a href="#"><img src="images/instagram.png" alt="Instagram Logo"></a>
-      <a href="#"><img src="images/linkedin.png" alt="LinkedIn Logo"></a>
+      <a href="#"><img src="images/facebook.png" alt="Social Media Facebook Logo"></a>
+      <a href="#"><img src="images/instagram.png" alt="Social Media Instagram Logo"></a>
+      <a href="#"><img src="images/linkedin.png" alt="Social Media LinkedIn Logo"></a>
     </nav>
   </footer>   
 </body>
