--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,7 @@
   <main>
     <div class="hero">
       <img src="images/hero_image.jpg" alt="Rafting Hero Image">
-      <h1>White Water Rafting Company</h1>
+      <h1>RAPIDS WHITE WATER RAFTING</h1>
       <article>
         <img src="images/happyclient.jpg" alt="Happy Clients">
         <p>Here at Rapids White Water Rafting, we are passionate about providing thrilling and unforgettable rafting experiences. Our team of experienced
