--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="About White Water Rafting Company - Safety, History, and Adventure">
+  <meta name="description" content="About Rapids White Water Rafting Company - Safety, History, and Adventure">
   <meta name="author" content="Sandra Cooper">
   <title>About Us</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
