--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="About Rapids White Water Rafting Company - Safety, History, and Adventure">
   <meta name="author" content="Sandra Cooper">
-  <title>About Us</title>
+  <title>About Us - Rapids White Water Rafting Company</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&family=Nunito:ital@0;1&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Rapids White Water Rafting Co. | Sandra Cooper</p>
+    <p>&copy; 2025 Rapids White Water Rafting Co. Sandra Cooper</p>
     <nav class="socialmedia">
       <a href="#"><img src="images/facebook.png" alt="Social Media Facebook Logo"></a>
       <a href="#"><img src="images/instagram.png" alt="Social Media Instagram Logo"></a>
