changes to updates added

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <img src="images/z-crossedoars.png" alt="Rafting Site Logo">
-    <h1>Rapids White Water Raftig Compay</h1>
+    <h1>Rapids White Water Rafting Company</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -45,7 +45,7 @@
          Lt. John Fremont used rubber rafts for expeditions in the 1800s.</p>
       </div>
       <div class="center">
-        <h2>History</h2>
+        <h2>HISTORY</h2>
         <img src="images/rafting_history_img.jpg" alt="Rafting History Image">
       </div>
       <div>
