--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <img src="images/z-crossedoars.png" alt="Rafting Site Logo">
-    <h2>Rapids White Water Rafting</h2>
+    <h2>RAPIDS WHITE WATER RAFTING</h2>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
