alt headings added

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,10 +28,10 @@
     
   <main>
     <div class="hero">
-      <img src="images/hero_image.jpg" alt="Rafting Hero Image">
+      <img src="images/hero_image.jpg" alt="Rapids Rafting Hero Image">
       <h1>RAPIDS WHITE WATER RAFTING</h1>
       <article>
-        <img src="images/happyclient.jpg" alt="Happy Clients">
+        <img src="images/happyclient.jpg" alt="Rapids Happy Clients">
         <p>Here at Rapids White Water Rafting, we are passionate about providing thrilling and unforgettable rafting experiences. Our team of experienced
         guides is dedicated to ensuring your safety and enjoyment on the water.</p>
       </article>
@@ -46,7 +46,7 @@
       </div>
       <div class="center">
         <h2>HISTORY</h2>
-        <img src="images/rafting_history_img.jpg" alt="Rafting History Image">
+        <img src="images/rafting_history_img.jpg" alt="Rapids Rafting History Image">
       </div>
       <div>
         <p>The sport's commercialization began in the mid-20th century with the Rockefellers using 
