--- a/wwr/about.html
+++ b/wwr/about.html
@@ -84,9 +84,9 @@
   <footer>
     <p>&copy; 2025 Rapids White Water Rafting Co. Sandra Cooper</p>
     <nav class="socialmedia">
-      <a href="#"><img src="images/facebook.png" alt="Facebook Logo (Social Media)"></a>
-      <a href="#"><img src="images/instagram.png" alt="Instagram Logo (Social Media)"></a>
-      <a href="#"><img src="images/linkedin.png" alt="LinkedIn Logo (Social Media)"></a>
+      <a href="#"><img src="images/facebook.png" alt="Follow us on facebook"></a>
+      <a href="#"><img src="images/instagram.png" alt="Follow us on instagram"></a>
+      <a href="#"><img src="images/linkedin.png" alt="Follow us on linkedin"></a>
     </nav>
   </footer>   
 </body>
