alt messages added

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,7 +28,7 @@
     
   <main>
     <div class="hero">
-      <img src="images/hero_image.jpg" alt="Rapids Rafting Hero Image">
+      <img src="images/hero_image.jpg" alt="Adventure Starts Here: Rapids Rafting">
       <h1>RAPIDS WHITE WATER RAFTING</h1>
       <article>
         <img src="images/happyclient.jpg" alt="Rapids Happy Clients">
@@ -46,7 +46,7 @@
       </div>
       <div class="center">
         <h2>HISTORY</h2>
-        <img src="images/rafting_history_img.jpg" alt="Rapids Rafting History Image">
+        <img src="images/rafting_history_img.jpg" alt="Experience the Rush of Rapids Rafting">
       </div>
       <div>
         <p>The sport's commercialization began in the mid-20th century with the Rockefellers using 
