--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <img src="images/z-crossedoars.png" alt="Rafting Site Logo">
+    <img src="images/z-crossedoars.png" alt="Conquer The Rapids With Us">
     <h2>RAPIDS WHITE WATER RAFTING</h2>
     <nav>
       <ul>
@@ -31,7 +31,7 @@
       <img src="images/hero_image.jpg" alt="Adventure Starts Here: Rapids Rafting">
       <h1>RAPIDS WHITE WATER RAFTING</h1>
       <article>
-        <img src="images/happyclient.jpg" alt="Rapids Happy Clients">
+        <img src="images/happyclient.jpg" alt="Feel The Thrill of Rapids Rafting ">
         <p>Here at Rapids White Water Rafting, we are passionate about providing thrilling and unforgettable rafting experiences. Our team of experienced
         guides is dedicated to ensuring your safety and enjoyment on the water.</p>
       </article>
