meta changes added

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="Discover the excitement of whitewater rafting with our guided tours and Adventure packages">
+  <meta name="description" content="Learn about Rapids White Water Rafting Company's commitment to safety, rich history, and the unforgettable adventures we offer on every trip.">
   <meta name="author" content="Sandra Cooper">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
