--- a/wwr/about.html
+++ b/wwr/about.html
@@ -60,23 +60,23 @@
       <h2>"Adventure Awaits You!"</h2>
       <figure>
         <img src="images/wwr1.jpg" alt="Adventure 1">
-        <figcaption></figcaption>
+        <figcaption>Thunder Alley</figcaption>
       </figure>
       <figure>
         <img src="images/wwr2.jpg" alt="Adventure 2">
-        <figcaption></figcaption>
+        <figcaption>Canyon Drop</figcaption>
       </figure>
       <figure>
         <img src="images/wwr3.jpg" alt="Adventure 3">
-        <figcaption></figcaption>
+        <figcaption>Raging Rooster</figcaption>
       </figure>
       <figure>
         <img src="images/wwr4.jpg" alt="Adventure 4">
-        <figcaption></figcaption>
+        <figcaption>Raging Rooster</figcaption>
       </figure>
       <figure>
         <img src="images/wwr5.jpg" alt="Adventure 5">
-        <figcaption></figcaption>
+        <figcaption>Whitewater Surge</figcaption>
       </figure>
     </section>
   </main>
