--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -4,37 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | HTML Form - User Poll</title>
+    <link rel="stylesheet" href="styles/poll-form.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,500;1,500&family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>WDD 130 | Sandra Cooper | HTML Form - User Poll</h1>
-    </header>
+    <header><h1>WDD 130 | HTML Form - User Poll</h1></header>
     <main>
         <form>
             <fieldset>
                 <legend>Contact Information</legend>
-                <label for="fullname">Full Name:</label>
-                <input type="text" id="fullname" name="fullname"><br>
-                <label for="email">Email:</label>
-                <input type="email" id="useremail" name="useremail"><br>
+                <div class="form-item column2">
+                    <label for="fullname">Full Name:</label>
+                    <input type="text" id="fullname" name="fullname">
+                </div>
+                <div class="form-item column2">
+                    <label for="email">Email:</label>
+                    <input type="email" id="useremail" name="useremail">
+                </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
-                <label for="browser">What is your favorite browser?</label><br>
-                <select id="browser" name="browser">
-                    <option value="chrome">Google Chrome</option>
-                    <option value="firefox">Mozilla Firefox</option>
-                    <option value="edge">Microsoft Edge</option>
-                    <option value="safari">Apple Safari</option>
-                    <option value="opera">Opera</option>
-                    <option value="brave">Brave</option>
-                    <option value="other">Other</option>
-                </select><br>
-                <label for="pet">Do you have a household pet?</label>
-                <input type="checkbox" id="pet" name="pet"><br>
-                <label for="feedback">List the places you have lived:</label>
-                <textarea name="feedback" id="feedback" placeholder=" " rows="4"></textarea>
-            </fieldset>
+                <div class="form-item column1">
+                    <label for="browser">What is your favorite browser?</label>
+                    <select id="browser" name="browser">
+                        <option value="chrome">Google Chrome</option>
+                        <option value="firefox">Mozilla Firefox</option>
+                        <option value="edge">Microsoft Edge</option>
+                        <option value="safari">Apple Safari</option>
+                        <option value="opera">Opera</option>
+                        <option value="brave">Brave</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-item column1">
+                    <label for="pet">Do you have a household pet?</label>
+                    <input type="checkbox" id="pet" name="pet">
+                </div>
+                <div class="form-item column1 textarea">
+                    <label for="feedback" class="nowrap-label">List the places you have lived:</label>
+                    <textarea name="feedback" id="feedback" placeholder=" " rows="4"></textarea>
+                </div>
+                </fieldset>
             <button type="submit">Submit Poll</button>
         </form>   
     </main>
