--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Form</title>
+    <meta name="description" content="Test your knowledge with this short quiz form about HTML and CSS">
+    <meta name="author" content="Sandra Cooper">
     <link rel="stylesheet" href="styles/quiz.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
