--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | HTML Form - User Poll</title>
+    <meta name="description" content="Take this poll and tell us more about yourself. Whats your favorite browser, Own a pet, and Where have you lived before?">
+    <meta name="author" content="Sandra Cooper">
     <link rel="stylesheet" href="styles/poll-form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
