--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="Contact Us Here at Rapids White Water Rafting Company to inquire about trips, reservations, or to give feedback. Get started on your next adventure!">
+  <meta name="description" content="Here at Rapids White Water Rafting Company we welcome all inquiries about trips, reservations, and or feedback. Contact us for your next adventure!">
   <meta name="author" content="Sandra Cooper">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
