naming conventions updated

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -39,15 +39,15 @@
     <section class="team">
       <h2>Meet Our Team</h2>
       <figure>
-        <img src="images/Yolande.jpg" alt="Rapids Smiling River Guide">
+        <img src="images/yolande.jpg" alt="Rapids Smiling River Guide">
         <figcaption>Yolande - Lead River Guide</figcaption>
       </figure>
       <figure>
-        <img src="images/Howard.jpg" alt="Rapids Happy Reservation Agent">
+        <img src="images/howard.jpg" alt="Rapids Happy Reservation Agent">
         <figcaption>Howard - Reservations Agent</figcaption>
       </figure>
       <figure>
-        <img src="images/Ashlei.jpg" alt="Rapids Friendly Customer Agent">
+        <img src="images/ashlei.jpg" alt="Rapids Friendly Customer Agent">
         <figcaption>Ashlei - Customer Service Manager</figcaption>
       </figure>
     </section>
