--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,21 +42,21 @@
     <section class="team">
       <h2>Meet Our Team</h2>
       <figure>
-        <img src="images/yolande.jpg" alt="Rapids Smiling River Guide">
+        <img src="images/yolande.jpg" alt="Yolande, Rapids Smiling River Guide">
         <figcaption>Yolande - Lead River Guide</figcaption>
       </figure>
       <figure>
-        <img src="images/howard.jpg" alt="Rapids Happy Reservation Agent">
+        <img src="images/howard.jpg" alt="Howard, Rapids Happy Reservation Agent">
         <figcaption>Howard - Reservations Agent</figcaption>
       </figure>
       <figure>
-        <img src="images/ashlei.jpg" alt="Rapids Friendly Customer Agent">
-        <figcaption>Ashlei - Customer Service Manager</figcaption>
+        <img src="images/ashlei.jpg" alt="Ashlei, Rapids Friendly Customer Agent">
+        <figcaption>Ashlei  Customer Service Manager</figcaption>
       </figure>
     </section>
 
     <section class="contact-form">
-      <h2>We Want to Hear From You!</h2>
+      <h3>We Want to Hear From You!</h3>
       <form>
         <label for="username">Full Name:</label>
         <input type="text" id="username" name="username" required>
