--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -76,7 +76,7 @@
         
         <label for="subscribe"><input type="checkbox" id="subscribe" name="subscribe">Please subscribe me to the monthly newsletter</label>
       
-        <button type="submit" name="submit">Send Message</button>
+        <button type="submit" name="submit">SUBMIT</button>
       </form>
     </section>
   </main>
