--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,16 +42,19 @@
     <section class="team">
       <h2>Meet Our Team</h2>
       <figure>
-        <img src="images/yolande.jpg" alt="Yolande, Rapids Smiling River Guide">
-        <figcaption>Yolande - Lead River Guide</figcaption>
+        <img src="images/howard.jpg" alt="Howard - River Guide">
+        <figcaption>Howard</figcaption>
+        <figcaption>Lead River Guide</figcaption>
       </figure>
       <figure>
-        <img src="images/howard.jpg" alt="Howard, Rapids Happy Reservation Agent">
-        <figcaption>Howard - Reservations Agent</figcaption>
+        <img src="images/yolande.jpg" alt="Yolande - Reservation Agent">
+        <figcaption>Yolande</figcaption>
+        <figcaption>Reservation Agent</figcaption>
       </figure>
       <figure>
-        <img src="images/ashlei.jpg" alt="Ashlei, Rapids Friendly Customer Agent">
-        <figcaption>Ashlei  Customer Service Manager</figcaption>
+        <img src="images/ashlei.jpg" alt="Ashlei - Customer Agent">
+        <figcaption>Ashlei</figcaption>
+        <figcaption>Customer Service Agent</figcaption>
       </figure>
     </section>
 
