--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,17 +42,17 @@
     <section class="team">
       <h2>Meet Our Team</h2>
       <figure>
-        <img src="images/howard.jpg" alt="Howard - River Guide">
+        <img src="images/howard.png" alt="Howard - River Guide">
         <figcaption>Howard</figcaption>
         <figcaption>Lead River Guide</figcaption>
       </figure>
       <figure>
-        <img src="images/yolande.jpg" alt="Yolande - Reservation Agent">
+        <img src="images/yolande.png" alt="Yolande - Reservation Agent">
         <figcaption>Yolande</figcaption>
         <figcaption>Reservation Agent</figcaption>
       </figure>
       <figure>
-        <img src="images/ashlei.jpg" alt="Ashlei - Customer Agent">
+        <img src="images/ashlei.png" alt="Ashlei - Customer Agent">
         <figcaption>Ashlei</figcaption>
         <figcaption>Customer Service Agent</figcaption>
       </figure>
