--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -43,18 +43,15 @@
       <h2>Meet Our Team</h2>
       <figure>
         <img src="images/howard.png" alt="Howard - River Guide">
-        <figcaption>Howard</figcaption>
-        <figcaption>Lead River Guide</figcaption>
+        <figcaption>Howard - Lead River Guide</figcaption>
       </figure>
       <figure>
         <img src="images/yolande.png" alt="Yolande - Reservation Agent">
-        <figcaption>Yolande</figcaption>
-        <figcaption>Reservation Agent</figcaption>
+        <figcaption>Yolande - Reservation Agent</figcaption>
       </figure>
       <figure>
         <img src="images/ashlei.png" alt="Ashlei - Customer Agent">
-        <figcaption>Ashlei</figcaption>
-        <figcaption>Customer Service Agent</figcaption>
+        <figcaption>Ashlei - Customer Service Agent</figcaption>
       </figure>
     </section>
 
