--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -56,7 +56,7 @@
     </section>
 
     <section class="contact-form">
-      <h3>We Want to Hear From You!</h3>
+      <h3>Have any questions? We'd love to hear from you.</h3>
       <form>
         <label for="username">Full Name:</label>
         <input type="text" id="username" name="username" required>
@@ -65,13 +65,13 @@
         <input type="email" id="useremail" name="useremail" required>
         
         <fieldset>
-        <h3>What Can We Help You With?</h3>
+        <h3>Select a topic:</h3>
         <label for="general"><input type="radio" id="general" name="purpose" value="general">General Inquiry</label>
         <label for="reservation"><input type="radio" id="reservation" name="purpose" value="reservation">Reservation Question</label>
         <label for="suggestion"><input type="radio" id="suggestion" name="purpose" value="suggestion">Website Suggestion</label>
         </fieldset>
 
-        <label for="message">Message:</label>
+        <label for="message">Tell us what you need help with:</label>
         <textarea id="message" name="message" rows="5" required></textarea>
         
         <label for="subscribe"><input type="checkbox" id="subscribe" name="subscribe">Please subscribe me to the monthly newsletter</label>
