radio buttons updated

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -66,9 +66,9 @@
         
         <fieldset>
         <h3>Select a topic:</h3>
-        <label for="general"><input type="radio" id="general" name="purpose" value="general">General Inquiry</label>
-        <label for="reservation"><input type="radio" id="reservation" name="purpose" value="reservation">Reservation Question</label>
-        <label for="suggestion"><input type="radio" id="suggestion" name="purpose" value="suggestion">Website Suggestion</label>
+        <label for="general"><input type="radio" id="general" name="general">General Inquiry</label>
+        <label for="reservation"><input type="radio" id="reservation" name="reservation">Reservation Question</label>
+        <label for="suggestion"><input type="radio" id="suggestion" name="suggestion">Website Suggestion</label>
         </fieldset>
 
         <label for="message">Tell us what you need help with:</label>
