--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
     </nav>
   </header>    
   <main>
-    <h1 class="contact-heading">Contact Us</h1>   
+    <h1 class="contact-heading">CONTACT US</h1>   
     <section class="contact-info">
       <h2>Our Office</h2>
       <p><strong>Address:</strong> 778 Rapids Way, Riverbend, CO 80423</p>
