--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -19,25 +19,28 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="trips.html">Trips</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>    
   <main>
-    <h1 class="contact-heading">CONTACT US</h1>   
+    <h1 class="contact-heading">CONTACT US</h1>
+    <div>
     <section class="contact-info">
-      <h2>Our Office</h2>
+      <h2>Location & Office Hours</h2>
       <p><strong>Address:</strong> 778 Rapids Way, Riverbend, CO 80423</p>
       <p><strong>Phone Number:</strong> (578) 123-4567</p>
       <p><strong>Email:</strong> info@rapidsrafting.com</p>
+      <p><strong>Office Hours:</strong> 9:00 AM to 5:00 PM</p>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34332.336126007554!2d-105.83977975698306!3d40.48458984480293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87699fa9fc969aab%3A0xc3a0f1e924b6c321!2sColorado%20River%20Headwater!5e0!3m2!1sen!2sbs!4v1754595560673!5m2!1sen!2sbs"
         width="600" height="450" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-    
+    </div> 
+
     <section class="team">
       <h2>Meet Our Team</h2>
       <figure>
