--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -84,14 +84,13 @@
   </main>
   
   <footer>
-    <p>&copy; 2025 Rapids White Water Rafting Co. Sandra Cooper</p>
+    <p><strong>&copy; 2025 Rapids White Water Rafting Co. Sandra Cooper</strong></p>
     <nav class="socialmedia">
       <a href="#"><img src="images/facebook.png" alt="Follow us on facebook"></a>
       <a href="#"><img src="images/instagram.png" alt="Follow us on instagram"></a>
       <a href="#"><img src="images/linkedin.png" alt="Follow us on linkedin"></a>
+      <a href="https://app.moqups.com/l3DeHDx6FSDOzuRV0QP3tve6RFTe1Kc1/view/page/ad12de680" target="_blank" rel="noopener noreferrer" class="wireframe-link">View Wireframe</a>
     </nav>
-  <!-- WireFrame Link
-  https://github.com/CooperSandra/wdd130/tree/main/wwr/wireframe -->
   </footer>   
 </body>
 
