trips html completed

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="At Rapids White Water Rafting Company we welcome all inquiries and feedback. Contact us for your next adventure!">
+  <meta name="description" content="Explore Rapids White Water Rafting trips and adventures for all skill levels.">
   <meta name="author" content="Sandra Cooper">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&family=Nunito:ital@0;1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/rafting.css">
-  <title>Contact Rapids White Water Rafting Company</title>   
+  <title>Rapids White Water Rafting Trips</title>   
 </head>
 
 <body>
@@ -24,39 +24,81 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-  </header>    
+  </header>
+
   <main>
     <div class="hero">
-        <video autoplay loop>
+        <video autoplay loop muted>
         <source src="images/white_water_rafting.mp4" type="video/mp4">
         <source src="images/white_water_rafting.mp4" type="video/ogg">
         Your browser does not support the video tag.
         </video>
-    <h1 class="hero">BOOK A TRIP WITH US!</h1>
+    <h1 class="hero">ADVENTURES AWAIT</h1>
     <article>
-        <button type="button" name="button"><strong>BOOK NOW</strong></button>
-        <p>Reservations can be made below with our booking widgets or via phone
-            by calling (578) 123-4567. Reservations made online require at least 3 days 
-            advanced notice. Some dates are unavailable if fully booked.</p>
+        <p>From gentle scenic floats to extreme adventures, here at rapids white water rafting we have 
+            the perfect trip for you. Contact us today, just click the blue button, or book online 
+            at least 3 days in advance. Some dates are unavailable if fully booked.</p>
+        <a href="contact.html">
+          <h2><strong>Call Us <br>& <br>Book Now</strong></h2>
+        </a>
     </article>
     </div>
 
-    <section class="tours">
-      <h2>RAPIDS POPULAR WHITE WATER RAFTING TRIPS</h2>
-      <figure>
-        <figcaption>1/2 DAY RAFT TRIP</figcaption>
-        <img src="images/half-day_tours.png" alt="Half-Day Tour">
-      </figure>
-      <figure>
-        <figcaption>1 DAY RAFT TRIP</figcaption>
-        <img src="images/one-day_tours.png" alt="One-Day Tour">
-      </figure>
-      <figure>
-        <figcaption>3 DAYS RAFT TRIP</figcaption>
-        <img src="images/three-day_tours.png" alt="Three-Days Tour">
-      </figure>
+    <section class="trips-gallery">
+      <h2>Rapids Popular Rafting Trips</h2>
+      <article>
+        <img src="images/half-day-tours.png" alt="Half-Day Scenic Adventure">
+        <h3>Half Day Scenic Adventure</h3>
+        <p>Perfect for beginners and families. Enjoy calm waters with the occasional splash,
+            Experience wildlife, gentle rapids, and beautiful scenery in just 4 hours.</p>
+      </article>
+      <article>
+        <img src="images/full-day-tour.png" alt="Full-Day Tour">
+        <h3>Full Day Rapids Run</h3>
+        <p>For the adventure seekers who want a mix of thrilling rapids and relaxing moments. 
+            Full day rapids run include a professional guide and riverside lunch for the full day.</p>
+      </article>
+      <article> 
+        <img src="images/three-day-tour.png" alt="Three-Days Tour">
+        <h3>Three Day Expedition</h3>
+        <p>A true wilderness adventure with camping under the stars. This trip offers 
+            challenging rapids, remote scenery, and unforgettable memories.</p>
+      </article>
     </section>
 
+    <section class="trips-table">
+      <h2>All Available Trips</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Trip Name</th>
+            <th>Duration</th>
+            <th>Skill Level</th>
+            <th>Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Half Day Scenic Adventure</td>
+            <td>4 Hours</td>
+            <td>Beginner Friendly</td>
+            <td>$85.00 per person</td>
+          </tr>
+          <tr>
+            <td>Full Day Tour</td>
+            <td>8 Hours</td>
+            <td>Intermediate / Skilled</td>
+            <td>$140.00 per person</td>
+          </tr>
+          <tr>
+            <td>Three Day Expedition</td>
+            <td>3 Days</td>
+            <td>Skilled Persons (Only)</td>
+            <td>$280.00 per person</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </main>
   
   <footer>
@@ -65,7 +107,7 @@
       <a href="#"><img src="images/facebook.png" alt="Follow us on facebook"></a>
       <a href="#"><img src="images/instagram.png" alt="Follow us on instagram"></a>
       <a href="#"><img src="images/linkedin.png" alt="Follow us on linkedin"></a>
-      <a href="https://app.moqups.com/l3DeHDx6FSDOzuRV0QP3tve6RFTe1Kc1/view/page/ad12de680" target="_blank" class="wireframe-link">View Wireframe</a>
+      <a href="https://app.moqups.com/l3DeHDx6FSDOzuRV0QP3tve6RFTe1Kc1/view/page/a13612e3e" target="_blank" class="wireframe-link">View Wireframe</a>
     </nav>
   </footer>   
 </body>
