changes added. home ad trips page completed

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -34,14 +34,13 @@
         Your browser does not support the video tag.
         </video>
     <h1 class="hero">ADVENTURES AWAIT</h1>
-    <article>
+    <section class="cta">
+        <h2>WE HAVE THE PERFECT TRIP FOR YOU</h2>
         <p>From gentle scenic floats to extreme adventures, here at rapids white water rafting we have 
             the perfect trip for you. Contact us today, just click the blue button, or book online 
             at least 3 days in advance. Some dates are unavailable if fully booked.</p>
-        <a href="contact.html">
-          <h2><strong>Call Us <br>& <br>Book Now</strong></h2>
-        </a>
-    </article>
+        <a href="contact.html" class="btn">View Contact</a>
+    </section>
     </div>
 
     <section class="trips-gallery">
