--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,7 +57,7 @@
       </section>
         
     <section class="adventures">
-      <h2>"Adventure Awaits You!"</h2>
+      <h2>Your Adventure Awaits!</h2>
       <figure>
         <img src="images/wwr1.jpg" alt="Adventure 1">
         <figcaption>Thunder Alley</figcaption>
@@ -72,7 +72,7 @@
       </figure>
       <figure>
         <img src="images/wwr4.jpg" alt="Adventure 4">
-        <figcaption>Raging Rooster</figcaption>
+        <figcaption>Rapids Run</figcaption>
       </figure>
       <figure>
         <img src="images/wwr5.jpg" alt="Adventure 5">
